--- a/src/server/index.html
+++ b/src/server/index.html
@@ -2,10 +2,14 @@
 <html>
   <head>
     <title>Spaceteam!</title>
-    <script src="https://cdn.jsdelivr.net/combine/npm/jquery@3.2.1,npm/underscore@1.8.3,npm/backbone@1.3.3,npm/react@15.6.1/dist/react.min.js,npm/react-dom@15.6.1/dist/react-dom.min.js"></script>
+    <!-- We use the unminified React libraries for better debugging and because this isn't being shipped lol. -->
+    <script src="https://cdn.jsdelivr.net/combine/npm/jquery@3.2.1,npm/underscore@1.8.3,npm/backbone@1.3.3,npm/react@15.6.1/dist/react.js,npm/react-dom@15.6.1/dist/react-dom.js"></script>
   </head>
   <body>
     <div id="app"></div>
   </body>
   <script src="/public/build-app.js"></script>
+  <!-- TODO(jeff): Figure out why connect-livereload doesn't work so we don't have to hardcode these scripts. -->
+  <script src="http://localhost:22222/livereload.js" async="" defer=""></script>
+  <script src="http://localhost:3000/public/lib/livereload-require-js-includes/index.js" async="" defer=""></script>
 </html>
