Clip the sun image to the viewport
https://stackoverflow.com/questions/5513382/absolute-position-and-overflowhidden.

--- a/src/server/index.html
+++ b/src/server/index.html
@@ -9,6 +9,8 @@
         height: 100vh;
         background-image: url('https://ladieslovekewlbowser.files.wordpress.com/2012/03/heic0807c_h1.jpg');
         background-size: cover;
+        position: relative;
+        overflow: hidden;
       }
     </style>
   </head>
