--- a/src/server/index.html
+++ b/src/server/index.html
@@ -2,8 +2,7 @@
 <html>
   <head>
     <title>Spaceteam!</title>
-    <!-- We use the unminified React libraries for better debugging and because this isn't being shipped lol. -->
-    <script src="https://cdn.jsdelivr.net/combine/npm/jquery@3.2.1,npm/underscore@1.8.3,npm/backbone@1.3.3,npm/react@15.6.1/dist/react.js,npm/react-dom@15.6.1/dist/react-dom.js"></script>
+    <script src="/public/lib.js"></script>
     <link rel="stylesheet" type="text/css" href="/public/styles.css">
   </head>
   <body>
